Grease Pencil edit mode select menu crash #56180

Closed
opened 2018-07-31 21:24:15 +02:00 by Falk David · 10 comments
Member

System Information
Windows 10 64bit
GeForce GTX 1060 6GB

Blender Version
Broken: 2.80 (sub 21), branch: blender2.8, commit date: 2018-07-31 15:03, hash: 9b817bc168, type: Release

Short description of error
When selecting any options from the select operator menu (e.g. Extend, Deselect, Toggle Selection, Entire Strokes), blender crashes.

Exact steps for others to reproduce the error

  • Open Blender2.8
  • Add a Grease Pencil Suzanne (Monkey)
  • Switch to Edit mode
  • Select a vertex
  • Select one of the options shown in the Select operator menu
**System Information** Windows 10 64bit GeForce GTX 1060 6GB **Blender Version** Broken: 2.80 (sub 21), branch: blender2.8, commit date: 2018-07-31 15:03, hash: 9b817bc1689, type: Release **Short description of error** When selecting any options from the select operator menu (e.g. Extend, Deselect, Toggle Selection, Entire Strokes), blender crashes. **Exact steps for others to reproduce the error** - Open Blender2.8 - Add a Grease Pencil Suzanne (Monkey) - Switch to Edit mode - Select a vertex - Select one of the options shown in the Select operator menu
Author
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor

Added subscribers: @JoshuaLeung, @antoniov

Added subscribers: @JoshuaLeung, @antoniov

@JoshuaLeung Do you remember this bug we detected some months ago and you told me it was a depshgraph problem?

@JoshuaLeung Do you remember this bug we detected some months ago and you told me it was a depshgraph problem?

Partial log is this:

25: KiUserExceptionDispatcher - 0x9C50DBF0
24: DEG::`anonymous namespace'::check_datablock_expanded - 0x918B8FB0
23: DEG::deg_copy_on_write_is_expanded - 0x918B82E0
22: DEG_get_evaluated_scene - 0x918A0380
21: ED_view3d_draw_depth - 0x900EF500

Partial log is this: 25: KiUserExceptionDispatcher - 0x9C50DBF0 24: DEG::`anonymous namespace'::check_datablock_expanded - 0x918B8FB0 23: DEG::deg_copy_on_write_is_expanded - 0x918B82E0 22: DEG_get_evaluated_scene - 0x918A0380 21: ED_view3d_draw_depth - 0x900EF500
Antonio Vazquez was assigned by Bastien Montagne 2018-08-01 08:38:00 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

I can confirm that P759 also fixes that bug, which is indeed same as #55791. ;)

I can confirm that [P759](https://archive.blender.org/developer/P759.txt) also fixes that bug, which is indeed same as #55791. ;)
Antonio Vazquez was unassigned by Bastien Montagne 2018-08-03 10:11:58 +02:00
Bastien Montagne self-assigned this 2018-08-03 10:11:58 +02:00

Stealing the task…

Stealing the task…

This issue was referenced by 6c8cc91f81

This issue was referenced by 6c8cc91f816d67f2f4ef1d41b226bb8d50a8b0b2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

thanks @mont29 for the fix.

thanks @mont29 for the fix.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56180
No description provided.