Fix T56180: Grease Pencil edit mode select menu crash.

Note that there are most certainly many other operators that’d need that
same flag... Don’t have time to hunt them down currently, will just fix
as issues are found, for now.