source/blender/editors/gpencil/gpencil_edit.c
@@ -2847,7 +2847,7 @@ void GPENCIL_OT_reproject(wmOperatorType *ot)
 	ot->poll = gp_strokes_edit3d_poll;
 
 	/* flags */
-	ot->flag = OPTYPE_REGISTER | OPTYPE_UNDO;
+	ot->flag = OPTYPE_REGISTER | OPTYPE_UNDO | OPTYPE_USE_EVAL_DATA;
 
 	/* properties */
 	ot->prop = RNA_def_enum(ot->srna, "type", reproject_type, GP_REPROJECT_PLANAR, "Projection Type", "");
